# sqlite-pex

./: .gitignore  Cargo.toml  PLAN.md  README.md  TASKS.md
.github/workflows/: release.yml
crates/presto-binary/: Cargo.toml
crates/presto-binary/src/: lib.rs
crates/presto-core/: Cargo.toml
crates/presto-core/src/: lib.rs
crates/presto-net/: Cargo.toml
crates/presto-net/src/: lib.rs
crates/presto-numeric/: Cargo.toml
crates/presto-numeric/src/: lib.rs
crates/presto-text/: Cargo.toml
crates/presto-text/src/: lib.rs
crates/presto-window/: Cargo.toml
crates/presto-window/src/: lib.rs
crates/presto-window/tests/: window_integration.rs
crates/sqlite-presto-ext/: Cargo.toml
crates/sqlite-presto-ext/src/: lib.rs
crates/sqlite-presto-ext/tests/: load_extension.rs  sql_golden.rs
tests/golden/: README.md  smoke-load.out
tests/sql/: README.md  smoke-load.sql
