[package]
name = "presto-binary"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64 = "0.22"
crc32fast = "1.4"
data-encoding = "2.9"
hashers = "1.0"
hex = "0.4"
hmac = "0.12"
md5 = { package = "md-5", version = "0.10" }
murmur3 = "0.5"
presto-core = { path = "../presto-core" }
sha1 = "0.10"
sha2 = "0.10"
twox-hash = "2.1"
